TEST_PROGRAMS/INVALID/cecily_thomas/assignment_as_expression.min
# Invalid MiniLang program (assignment expression)

var x: int;
var y: int;

x = y = 5;
